# lamba-cython

./: .gitignore  Makefile  README.md  build-wheels.sh  build.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yaml  setup.py
_cython/: hello.pyx
cython_m/: hello.pyx
python_lambda/: handler.py
python_m/: hello.py
