[tool.poetry]
name = "picklestruct"
version = "0.1.0"
description = ""
authors = ["Andrew Grinevich <andrew.grinevich@orca.security>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
scalene = "^1.5.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
