[tool.poetry]
name = "cython_m"
version = "0.1.0"
description = ""
authors = ["Andrew Grinevich <andrew.grinevich@orca.security>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Utilities",
]
keywords = ["cython",  "poetry"]
readme = "README.md"

build = "build.py"
packages = [
    {include = "cython_m"},
    {include = "python_m"},
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
scalene = "^1.5.9"
Cython = "^0.29.32"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython>=0.29.32", "setuptools>=60.8.1"]
build-backend = "poetry.core.masonry.api"
